Setup a flask server which returns a random class of pollution level

--- a/.gitignore
+++ b/.gitignore
@@ -27,3 +27,18 @@ frontend/yarn-error.log*
 backend/npm-debug.log*
 backend/yarn-debug.log*
 backend/yarn-error.log*
+
+model/venv/
+model/*.pyc
+model/__pycache__/
+model/instance/
+model/.cache/
+model/.pytest_cache/
+model/.coverage
+model/htmlcov/
+model/dist/
+model/build/
+model/*.egg-info/
+model/.idea/
+model/*.swp
+model/*~
